Canvis formals, de projecte 5050 a escola 5050

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,7 +8,7 @@ password_inventat = 'bicicleta'
 <div class="row">
   <div class="col-lg-8 col-md-6">
     <div class="logo-intro">
-      <%= image_tag("projecte5050.png", class: "logo-portada") %>
+      <%= image_tag("escola5050.png", class: "logo-portada") %>
 
     </div>
   </div>
