--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-md navbar-light barra-header">
   <div class="container">
     <%= link_to root_path, class: "navbar-brand" do %>
-    Projecte 50/50
+    Escola 50/50
     <% end %>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMain" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
