--- a/app/assets/stylesheets/fases.scss
+++ b/app/assets/stylesheets/fases.scss
@@ -560,3 +560,131 @@
 	border-radius: 5px;
 	padding: 10px;
 }
+
+
+// FASE 11 - Segon repte de les lletres perdudes
+
+#input-repte-11 {
+	width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+}
+
+
+// FASE 12 - Quanta llum necessitem?
+
+.interruptor {
+	float: left;
+}
+
+.interruptor-1 {
+	max-height: 150px;
+}
+
+.interruptor-2 {
+	max-height: 150px;
+}
+
+.instruccions-interruptor {
+	margin-left: 190px;
+	background-color: #eaeaea;
+	padding: 10px 15px;
+}
+
+.cas-iluminacio {
+	color: #00a99d;
+	font-size: 1.3em;
+	font-weight: bold;
+}
+
+.break-float {
+	clear: both;
+}
+
+.llum-aula {
+	margin-top: 20px;
+	max-width: 570px;
+}
+
+.imatge-classe {
+	position: relative;
+}
+
+#punt-lux-1 {
+	position: absolute;
+	top: 235px;
+	left: 90px;
+	width: 20px;
+	height: 20px;
+	border-radius: 10px;
+	border: 1px solid #333;
+	background-color: white;
+}
+
+#punt-lux-1:hover {
+	background-color: #00a99d;
+}
+
+#info-lux-1 {
+	position: absolute;
+	top: 195px;
+	left: 60px;
+	background-color: #00a99d;
+	color: white;
+	font-weight: bold;
+	border: 1px solid #333333;
+	padding: 5px 8px;
+}
+
+#punt-lux-2 {
+	position: absolute;
+	top: 280px;
+	left: 350px;
+	width: 20px;
+	height: 20px;
+	border-radius: 10px;
+	border: 1px solid #333;
+	background-color: white;
+}
+
+#punt-lux-2:hover {
+	background-color: #00a99d;
+}
+
+#info-lux-2 {
+	position: absolute;
+	top: 235px;
+	left: 330px;
+	background-color: #00a99d;
+	color: white;
+	font-weight: bold;
+	border: 1px solid #333333;
+	padding: 5px 8px;
+}
+
+#punt-lux-3 {
+	position: absolute;
+	top: 250px;
+	left: 470px;
+	width: 20px;
+	height: 20px;
+	border-radius: 10px;
+	border: 1px solid #333;
+	background-color: white;
+}
+
+#punt-lux-3:hover {
+	background-color: #00a99d;
+}
+
+#info-lux-3 {
+	position: absolute;
+	top: 205px;
+	left: 445px;
+	background-color: #00a99d;
+	color: white;
+	font-weight: bold;
+	border: 1px solid #333333;
+	padding: 5px 8px;
+}
