--- a/app/views/puntuacions/index.html.erb
+++ b/app/views/puntuacions/index.html.erb
@@ -92,6 +92,20 @@ end
         <li class="<%= classe_li(punt.correcte) %>"><%= usuari.first_name %> <%= usuari.last_name %>: <%= text_resultat(punt.correcte) %></li>
       <% end %>
       </ul>
+      <p>Fase 11:</p>
+      <ul>
+      <% @puntuacions_fase11.each do |punt| %>
+        <% usuari = User.find_by(id: punt.user_id) %>
+        <li class="<%= classe_li(punt.correcte) %>"><%= usuari.first_name %> <%= usuari.last_name %>: <%= text_resultat(punt.correcte) %></li>
+      <% end %>
+      </ul>
+      <p>Fase 12:</p>
+      <ul>
+      <% @puntuacions_fase12.each do |punt| %>
+        <% usuari = User.find_by(id: punt.user_id) %>
+        <li class="<%= classe_li(punt.correcte) %>"><%= usuari.first_name %> <%= usuari.last_name %>: <%= text_resultat(punt.correcte) %></li>
+      <% end %>
+      </ul>
     </div>
   </div>
   <div class="col-md-6">
