--- a/app/views/fases/_taller2_f12.html.erb
+++ b/app/views/fases/_taller2_f12.html.erb
@@ -22,12 +22,12 @@
     <%= image_tag "aula_2.jpg", class: "llum-aula", id: "aula-2-llums" %>
     <%= image_tag "aula_3.jpg", class: "llum-aula", id: "aula-3-llums" %>
     <%= image_tag "aula_4.jpg", class: "llum-aula", id: "aula-4-llums" %>
-    <div id="punt-lux-1"></div>
-    <div id="info-lux-1"></div>
-    <div id="punt-lux-2"></div>
-    <div id="info-lux-2"></div>
-    <div id="punt-lux-3"></div>
-    <div id="info-lux-3"></div>
+    <div id="punt-lux-1" class="punt-lux-primer"></div>
+    <div id="info-lux-1" class="info-lux-primer"></div>
+    <div id="punt-lux-2" class="punt-lux-segon"></div>
+    <div id="info-lux-2" class="info-lux-segon"></div>
+    <div id="punt-lux-3" class="punt-lux-tercer"></div>
+    <div id="info-lux-3" class="info-lux-tercer"></div>
   </div>
 
   <br/>
