--- a/app/views/fases/canvi_fase_2.html.erb
+++ b/app/views/fases/canvi_fase_2.html.erb
@@ -5,6 +5,9 @@
 			<p><%= link_to "Fase 10", fases_canvi_fase_2_path(fase: '10') %>: Tria la teva aventura</p>
 			<p><%= link_to "Fase 11", fases_canvi_fase_2_path(fase: '11') %>: Una frase amagada</p>
 			<p><%= link_to "Fase 12", fases_canvi_fase_2_path(fase: '12') %>: Quanta llum necessitem?</p>
+			<p><%= link_to "Fase 13", fases_canvi_fase_2_path(fase: '13') %>: Memòria prodigiosa</p>
+			<p><%= link_to "Fase 14", fases_canvi_fase_2_path(fase: '14') %>: Quanta llum necessitem? (2)</p>
+			<p><%= link_to "Fase 15", fases_canvi_fase_2_path(fase: '15') %>: Quanta llum necessitem? (3)</p>
 
 			<p><%= link_to "Amagar-ho tot", fases_canvi_fase_2_path(fase: '0') %></p>
 			
