--- a/app/views/home/taller2.html.erb
+++ b/app/views/home/taller2.html.erb
@@ -6,6 +6,9 @@
       <%= render 'fases/taller2_f10' %>
       <%= render 'fases/taller2_f11' %>
       <%= render 'fases/taller2_f12' %>
+      <%= render 'fases/taller2_f13' %>
+      <%= render 'fases/taller2_f14' %>
+      <%= render 'fases/taller2_f15' %>
 
     </div>
   </div>
