--- a/app/views/fases/canvi_fase_2.html.erb
+++ b/app/views/fases/canvi_fase_2.html.erb
@@ -8,6 +8,7 @@
 			<p><%= link_to "Fase 13", fases_canvi_fase_2_path(fase: '13') %>: Memòria prodigiosa</p>
 			<p><%= link_to "Fase 14", fases_canvi_fase_2_path(fase: '14') %>: Quanta llum necessitem? (2)</p>
 			<p><%= link_to "Fase 15", fases_canvi_fase_2_path(fase: '15') %>: Quanta llum necessitem? (3)</p>
+			<p><%= link_to "Fase 16", fases_canvi_fase_2_path(fase: '16') %>: Seguim les instruccions</p>
 
 			<p><%= link_to "Amagar-ho tot", fases_canvi_fase_2_path(fase: '0') %></p>
 			
