--- a/app/views/home/taller2.html.erb
+++ b/app/views/home/taller2.html.erb
@@ -9,6 +9,7 @@
       <%= render 'fases/taller2_f13' %>
       <%= render 'fases/taller2_f14' %>
       <%= render 'fases/taller2_f15' %>
+      <%= render 'fases/taller2_f16' %>
 
     </div>
   </div>
