--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,6 +12,13 @@
       <%= render 'fases/vuitena' %>
       <%= render 'fases/novena' %>
       <%= render 'fases/desena' %>
+      <%= render 'fases/taller2_f10' %>
+      <%= render 'fases/taller2_f11' %>
+      <%= render 'fases/taller2_f12' %>
+      <%= render 'fases/taller2_f13' %>
+      <%= render 'fases/taller2_f14' %>
+      <%= render 'fases/taller2_f15' %>
+      <%= render 'fases/taller2_f16' %>
 
     </div>
   </div>
